# comparing-asynchrounous-sync-frameworks

./: README.md  fastapi_app.py  flask_app.py  pyproject.toml
